--- a/pom.xml
+++ b/pom.xml
@@ -1,46 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.jenkins-ci.plugins</groupId>
-        <artifactId>plugin</artifactId>
-        <version>3.42</version>
-        <relativePath />
-    </parent>
+<parent>
+<groupId>org.jenkins-ci.plugins</groupId>
+<artifactId>plugin</artifactId>
+<version>3.42</version>
+<relativePath />
+</parent>
 
-    <artifactId>github-branch-source</artifactId>
-    <version>${revision}${changelist}</version>
-    <packaging>hpi</packaging>
-    <name>GitHub Branch Source Plugin</name>
-    <url>https://wiki.jenkins-ci.org/display/JENKINS/GitHub+Branch+Source+Plugin</url>
-    <description>Multibranch projects and organization folders from GitHub. Maintained by CloudBees, Inc.</description>
+<artifactId>github-branch-source</artifactId>
+<version>${revision}${changelist}</version>
+<packaging>hpi</packaging>
+<name>GitHub Branch Source Plugin</name>
+<url>https://wiki.jenkins-ci.org/display/JENKINS/GitHub+Branch+Source+Plugin</url>
+<description>Multibranch projects and organization folders from GitHub. Maintained by CloudBees, Inc.</description>
 
-    <licenses>
-        <license>
-            <name>MIT</name>
-            <url>http://opensource.org/licenses/MIT</url>
-        </license>
-    </licenses>
+<licenses>
+<license>
+<name>MIT</name>
+@@ -34,181 +39,29 @@
+<url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
+<tag>${scmTag}</tag>
+</scm>
 
-    <properties>
-        <revision>2.4.6-beta-3</revision>
-        <changelist>-SNAPSHOT</changelist>
-        <java.level>8</java.level>
-        <jenkins.version>2.121.3</jenkins.version>
-        <scm-api.version>2.3.0</scm-api.version>
-    </properties>
-
-    <scm>
-        <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
-        <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-        <tag>${scmTag}</tag>
-    </scm>
-
-    <dependencies>
+<dependencies>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>structs</artifactId>
@@ -76,6 +63,7 @@
             <artifactId>display-url-api</artifactId>
             <version>2.0</version>
         </dependency>
+        <!-- Currently just here for interactive testing via hpi:run: -->
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>junit</artifactId>
@@ -179,10 +167,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
-    </dependencies>
+        <!-- your dependencies remain unchanged -->
+        <!-- ... (unchanged dependencies) ... -->
+</dependencies>
 
-    <dependencyManagement>
-        <dependencies>
+<dependencyManagement>
+<dependencies>
             <dependency>
                 <groupId>org.jenkins-ci</groupId>
                 <artifactId>annotation-indexer</artifactId>
@@ -203,26 +193,29 @@
                 <artifactId>token-macro</artifactId>
                 <version>2.6</version>
             </dependency>
-        </dependencies>
-    </dependencyManagement>
+            <!-- your dependencyManagement remains unchanged -->
+</dependencies>
+</dependencyManagement>
 
-    <repositories>
-        <repository>
-            <id>repo.jenkins-ci.org</id>
+<repositories>
+<repository>
+<id>repo.jenkins-ci.org</id>
             <url>http://repo.jenkins-ci.org/public/</url>
-        </repository>
-    </repositories>
+            <url>https://repo.jenkins-ci.org/public/</url>
+</repository>
+</repositories>
 
-    <pluginRepositories>
-        <pluginRepository>
-            <id>repo.jenkins-ci.org</id>
+<pluginRepositories>
+<pluginRepository>
+<id>repo.jenkins-ci.org</id>
             <url>http://repo.jenkins-ci.org/public/</url>
-        </pluginRepository>
-    </pluginRepositories>
+            <url>https://repo.jenkins-ci.org/public/</url>
+</pluginRepository>
+</pluginRepositories>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.jenkins-ci.tools</groupId>
-                <artifactId>maven-hpi-plugin</artifactId>
-               
+@@ -230,5 +83,4 @@
+</plugin>
+</plugins>
+</build>
+
+</project>
